jswt-parser/src/snapshots/jswt_parser__expression__test__parse_argument_expression_with_expression_parameter.snap
---
source: jswt-parser/src/expression.rs
expression: actual
---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_argument_expression_with_expression_parameter",
                    module: "module/test_parse_argument_expression_with_expression_parameter",
                    start: 0,
                    end: 32,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_argument_expression_with_expression_parameter",
                        module: "module/test_parse_argument_expression_with_expression_parameter",
                        start: 0,
                        end: 32,
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test_parse_argument_expression_with_expression_parameter",
                                    module: "module/test_parse_argument_expression_with_expression_parameter",
                                    start: 0,
                                    end: 32,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_parse_argument_expression_with_expression_parameter",
                                        module: "module/test_parse_argument_expression_with_expression_parameter",
                                        start: 9,
                                        end: 13,
                                    },
                                    value: "main",
                                },
                                params: FormalParameterList {
                                    span: Span {
                                        file: "test_parse_argument_expression_with_expression_parameter",
                                        module: "module/test_parse_argument_expression_with_expression_parameter",
                                        start: 13,
                                        end: 15,
                                    },
                                    parameters: [],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "test_parse_argument_expression_with_expression_parameter",
                                        module: "module/test_parse_argument_expression_with_expression_parameter",
                                        start: 16,
                                        end: 32,
                                    },
                                    statements: StatementList {
                                        statements: [
                                            Expression(
                                                ExpressionStatement {
                                                    span: Span {
                                                        file: "test_parse_argument_expression_with_expression_parameter",
                                                        module: "module/test_parse_argument_expression_with_expression_parameter",
                                                        start: 18,
                                                        end: 30,
                                                    },
                                                    expression: Arguments(
                                                        ArgumentsExpression {
                                                            span: Span {
                                                                file: "test_parse_argument_expression_with_expression_parameter",
                                                                module: "module/test_parse_argument_expression_with_expression_parameter",
                                                                start: 18,
                                                                end: 29,
                                                            },
                                                            ident: Identifier(
                                                                IdentifierExpression {
                                                                    span: Span {
                                                                        file: "test_parse_argument_expression_with_expression_parameter",
                                                                        module: "module/test_parse_argument_expression_with_expression_parameter",
                                                                        start: 18,
                                                                        end: 22,
                                                                    },
                                                                    ident: Identifier {
                                                                        span: Span {
                                                                            file: "test_parse_argument_expression_with_expression_parameter",
                                                                            module: "module/test_parse_argument_expression_with_expression_parameter",
                                                                            start: 18,
                                                                            end: 22,
                                                                        },
                                                                        value: "test",
                                                                    },
                                                                    ty: Unknown,
                                                                },
                                                            ),
                                                            arguments: ArgumentsList {
                                                                span: Span {
                                                                    file: "test_parse_argument_expression_with_expression_parameter",
                                                                    module: "module/test_parse_argument_expression_with_expression_parameter",
                                                                    start: 22,
                                                                    end: 29,
                                                                },
                                                                arguments: [
                                                                    Additive(
                                                                        BinaryExpression {
                                                                            span: Span {
                                                                                file: "test_parse_argument_expression_with_expression_parameter",
                                                                                module: "module/test_parse_argument_expression_with_expression_parameter",
                                                                                start: 23,
                                                                                end: 28,
                                                                            },
                                                                            left: Literal(
                                                                                Integer(
                                                                                    IntegerLiteral {
                                                                                        span: Span {
                                                                                            file: "test_parse_argument_expression_with_expression_parameter",
                                                                                            module: "module/test_parse_argument_expression_with_expression_parameter",
                                                                                            start: 23,
                                                                                            end: 24,
                                                                                        },
                                                                                        value: 1,
                                                                                        ty: Binding(
                                                                                            "i32",
                                                                                        ),
                                                                                    },
                                                                                ),
                                                                            ),
                                                                            op: Plus(
                                                                                Span {
                                                                                    file: "test_parse_argument_expression_with_expression_parameter",
                                                                                    module: "module/test_parse_argument_expression_with_expression_parameter",
                                                                                    start: 25,
                                                                                    end: 26,
                                                                                },
                                                                            ),
                                                                            right: Literal(
                                                                                Integer(
                                                                                    IntegerLiteral {
                                                                                        span: Span {
                                                                                            file: "test_parse_argument_expression_with_expression_parameter",
                                                                                            module: "module/test_parse_argument_expression_with_expression_parameter",
                                                                                            start: 27,
                                                                                            end: 28,
                                                                                        },
                                                                                        value: 2,
                                                                                        ty: Binding(
                                                                                            "i32",
                                                                                        ),
                                                                                    },
                                                                                ),
                                                                            ),
                                                                            ty: Unknown,
                                                                        },
                                                                    ),
                                                                ],
                                                            },
                                                            ty: Unknown,
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
