jswt-parser/src/snapshots/jswt_parser__expression__test__parse_arguments_expression.snap
---
source: jswt-parser/src/expression.rs
expression: actual
---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_arguments_expression",
                    module: "module/test_parse_arguments_expression",
                    start: 1,
                    end: 30,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_arguments_expression",
                        module: "module/test_parse_arguments_expression",
                        start: 1,
                        end: 30,
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test_parse_arguments_expression",
                                    module: "module/test_parse_arguments_expression",
                                    start: 1,
                                    end: 30,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_parse_arguments_expression",
                                        module: "module/test_parse_arguments_expression",
                                        start: 10,
                                        end: 14,
                                    },
                                    value: "main",
                                },
                                params: FormalParameterList {
                                    span: Span {
                                        file: "test_parse_arguments_expression",
                                        module: "module/test_parse_arguments_expression",
                                        start: 14,
                                        end: 16,
                                    },
                                    parameters: [],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "test_parse_arguments_expression",
                                        module: "module/test_parse_arguments_expression",
                                        start: 17,
                                        end: 30,
                                    },
                                    statements: StatementList {
                                        statements: [
                                            Expression(
                                                ExpressionStatement {
                                                    span: Span {
                                                        file: "test_parse_arguments_expression",
                                                        module: "module/test_parse_arguments_expression",
                                                        start: 19,
                                                        end: 28,
                                                    },
                                                    expression: Arguments(
                                                        ArgumentsExpression {
                                                            span: Span {
                                                                file: "test_parse_arguments_expression",
                                                                module: "module/test_parse_arguments_expression",
                                                                start: 19,
                                                                end: 27,
                                                            },
                                                            ident: Identifier(
                                                                IdentifierExpression {
                                                                    span: Span {
                                                                        file: "test_parse_arguments_expression",
                                                                        module: "module/test_parse_arguments_expression",
                                                                        start: 19,
                                                                        end: 24,
                                                                    },
                                                                    ident: Identifier {
                                                                        span: Span {
                                                                            file: "test_parse_arguments_expression",
                                                                            module: "module/test_parse_arguments_expression",
                                                                            start: 19,
                                                                            end: 24,
                                                                        },
                                                                        value: "print",
                                                                    },
                                                                },
                                                            ),
                                                            arguments: ArgumentsList {
                                                                span: Span {
                                                                    file: "test_parse_arguments_expression",
                                                                    module: "module/test_parse_arguments_expression",
                                                                    start: 24,
                                                                    end: 27,
                                                                },
                                                                arguments: [
                                                                    Literal(
                                                                        Integer(
                                                                            IntegerLiteral {
                                                                                span: Span {
                                                                                    file: "test_parse_arguments_expression",
                                                                                    module: "module/test_parse_arguments_expression",
                                                                                    start: 25,
                                                                                    end: 26,
                                                                                },
                                                                                value: 6,
                                                                            },
                                                                        ),
                                                                    ),
                                                                ],
                                                            },
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
